--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,13 @@
     "type": "silverstripe-module",
     "description": "work out the dimensions of products for delivery costings based on size (and other applications)",
     "keywords": [
+        "Silverstripe-CMS",
+        "CMS",
+        "Silverstripe",
         "ecommerce",
         "e-commerce",
         "shop",
-        "dimensions",
-        "silverstripe"
+        "dimensions"
     ],
     "license": "Sunny Side Up (BSD-3-Clause and CUSTOM)",
     "authors": [
@@ -20,6 +22,7 @@
     "require": {
         "php": ">=5.3.2",
         "silverstripe/framework": "~2.4",
-        "sunnysideup/ecommerce": "~2.4"
+        "sunnysideup/ecommerce": "~2.4",
+        "silverstripe/cms": "~2.4"
     }
 }
